force-app/main/default/objects/Invoice__c/fields/Aging_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Aging_Bucket__c</fullName>
    <formula>IF(
    Days_Overdue__c &lt;= 0, &quot;Not Due&quot;,
    IF(
        Days_Overdue__c &lt;= 30, &quot;0–30&quot;,
        IF(
            Days_Overdue__c &lt;= 60, &quot;31–60&quot;,
            IF(
                Days_Overdue__c &lt;= 90, &quot;61–90&quot;,
                &quot;90+&quot;
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aging Bucket</label>
    <type>Text</type>
</CustomField>