force-app/main/default/objects/Invoice__c/fields/Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>Amount_Due__c</fullName>
    <description>Total amount remaining for the Invoice</description>
    <formula>Total_Amount__c - Amount_Paid__c</formula>
    <label>Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>