force-app/main/default/objects/Invoice__c/fields/Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid__c</fullName>
    <description>Total amount paid for the Invoice</description>
    <label>Amount Paid</label>
    <summarizedField>Payment_Intent__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Payment_Intent__c.Status__c</field>
        <operation>equals</operation>
        <value>Succeed</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment_Intent__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>