force-app/main/default/objects/Invoice__c/fields/Billing_Admin_Approved__c.field-meta.xml
<CustomField>
    <fullName>Billing_Admin_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sarah&apos;s approval</description>
    <label>Billing Admin Approved</label>
    <type>Checkbox</type>
</CustomField>