force-app/main/default/objects/Invoice__c/fields/Billing_Admin_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Admin_Approved_Date__c</fullName>
    <description>When Sarah approved</description>
    <label>Billing Admin Approved Date</label>
    <type>DateTime</type>
</CustomField>