force-app/main/default/objects/Invoice__c/fields/Convert_Parent_Lead__c.field-meta.xml
<CustomField>
    <fullName>Convert_Parent_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Convert Parent Lead?</label>
    <type>Checkbox</type>
</CustomField>