force-app/main/default/objects/Invoice__c/fields/Initial_Fee__c.field-meta.xml
<CustomField>
    <fullName>Initial_Fee__c</fullName>
    <description>One-time initial fee</description>
    <label>Initial Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>