force-app/main/default/objects/Invoice__c/fields/Last_Payment_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Attempt__c</fullName>
    <description>Last retry timestamp</description>
    <label>Last Payment Attempt</label>
    <type>DateTime</type>
</CustomField>