force-app/main/default/objects/Invoice__c/fields/Monthly_Fee__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Fee__c</fullName>
    <description>Monthly recurring fee</description>
    <label>Monthly Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>