force-app/main/default/objects/Invoice__c/fields/Notify_Partner_Email__c.field-meta.xml
<CustomField>
    <fullName>Notify_Partner_Email__c</fullName>
    <defaultValue>&quot;mahesh.delipat@gmail.com&quot;</defaultValue>
    <label>Notify Partner Email</label>
    <type>Email</type>
</CustomField>