force-app/main/default/objects/Invoice__c/fields/Partner_Approved__c.field-meta.xml
<CustomField>
    <fullName>Partner_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Partner&apos;s approval</description>
    <label>Partner Approved</label>
    <type>Checkbox</type>
</CustomField>