force-app/main/default/objects/Invoice__c/fields/Partner_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Partner_Approved_Date__c</fullName>
    <description>When Partner approved</description>
    <label>Partner Approved Date</label>
    <type>DateTime</type>
</CustomField>