force-app/main/default/objects/Invoice__c/fields/Payment_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Payment_Attempts__c</fullName>
    <description>Number of payment retries</description>
    <label>Payment Attempts</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>