force-app/main/default/objects/Invoice__c/fields/Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date__c</fullName>
    <description>When payment received</description>
    <label>Payment Date</label>
    <type>DateTime</type>
</CustomField>