force-app/main/default/objects/Invoice__c/fields/Previous_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Previous_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Next Invoices</relationshipLabel>
    <relationshipName>Previous_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>