force-app/main/default/objects/Invoice__c/fields/QBO_Invoice_ID__c.field-meta.xml
<CustomField>
    <fullName>QBO_Invoice_ID__c</fullName>
    <description>QuickBooks invoice ID</description>
    <externalId>true</externalId>
    <label>QBO Invoice ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>