force-app/main/default/objects/Invoice__c/fields/QBO_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>QBO_Invoice_Number__c</fullName>
    <label>QBO Invoice Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>