force-app/main/default/objects/Invoice__c/fields/Rejection_Comments__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Comments__c</fullName>
    <description>Rejection notes</description>
    <label>Rejection Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>