force-app/main/default/objects/Invoice__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Invoice status</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Pending_Billing_Admin</fullName>
                <label>Pending Billing Admin</label>
            </value>
            <value>
                <fullName>Pending_Partner</fullName>
                <label>Pending Partner</label>
            </value>
            <value>
                <fullName>Finalized</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Payment_Failed</fullName>
                <label>Payment Failed</label>
            </value>
            <value>
                <fullName>ACH_Returned</fullName>
                <label>ACH Returned</label>
            </value>
            <value>
                <fullName>Chargeback_Lost</fullName>
                <label>Chargeback Lost</label>
            </value>
            <value>
                <fullName>Partially_Paid</fullName>
                <label>Partially Paid</label>
            </value>
            <value>
                <fullName>Overdue</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>