force-app/main/default/objects/Invoice__c/fields/Stripe_Payment_Intent_ID__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Payment_Intent_ID__c</fullName>
    <description>Stripe payment identifier</description>
    <label>Stripe Payment Intent ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>