force-app/main/default/objects/Invoice__c/fields/Stripe_Payment_Link__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Payment_Link__c</fullName>
    <description>Payment link for client</description>
    <label>Stripe Payment Link</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>