force-app/main/default/objects/Invoice__c/fields/Total_Invoice_Line_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoice_Line_Amount__c</fullName>
    <label>Total Invoice Line Amount</label>
    <summarizedField>Invoice_Line_Item__c.Line_Amount__c</summarizedField>
    <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>